# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2012 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  13 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.defaults,
  defaults/initrd.scripts, defaults/linuxrc, doc/genkernel.8.txt:
  Bug #351873: More livecd control, and initramfs livecd argument
  documentation.

  13 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> arch/alpha/kernel-config,
  arch/ppc/kernel-config, arch/x86/kernel-config, arch/x86_64/kernel-config,
  defaults/kernel-config:
  Bug #336170: amd74xx was long-replaced by pata_amd. The old driver is
  problematic, as even with the pata_amd module loaded, it will not release the
  device. Disable the old driver on remaining platforms, add pata_amd where
  missing & needed (not alpha).

  13 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
  Bug #414581: ensure built-in initramfs compress config options are set to
  avoid silentoldconfig bailing out.

  13 Oct 2012; Łukasz Stelmach <stlman@poczta.fm> gen_cmdline.sh,
  gen_compile.sh, gen_configkernel.sh, gen_determineargs.sh, gen_funcs.sh,
  genkernel:
  Bug #435210 support external kernel output location, to allow pristine
  source.

  13 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> gen_compile.sh:
  Bug #397947: Run depmod on new modules to avoid need to run at every boot on
  unionfs systems, or systemd that never runs it.

  13 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
  Put the version of genkernel used in a build into /etc/build_id.

  13 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/linuxrc:
  Extra creation of /run in the LiveCD scope, before any union/aufs mount.

  03 Oct 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.43

  03 Oct 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  Use actual kernel config for check of available compression methods (bug
  #436820)
