@@ -101,6 +101,10 @@ do
 			DMRAID_OPTS=${x#*=}
 			USE_DMRAID_NORMAL=1
 		;;
+		domultipath) 
+			good_msg "Booting with multipath activated." 
+			USE_MULTIPATH_NORMAL=1 
+		;;
 		dozfs*)
 			USE_ZFS=1
 
